some sidebar/notifications/listFunctions CSS fixes.. also added custom scrollbars for webkit

--- a/css/content.css
+++ b/css/content.css
@@ -7,9 +7,9 @@
   overflow-y: auto;
   position: fixed;
   left: 0;
-  right: 260px;
-  bottom: 36px;
-  top: 0;
+  right: 270px;
+  bottom: 45px;
+  top: 10px;
 }
 
 #content h1, #content h2, #content h3 {
