--- a/css/wunderlist.css
+++ b/css/wunderlist.css
@@ -85,14 +85,26 @@ a {
 
 #listfunctions {
   position: absolute;
-  right: 280px;
+  right: 290px;
   height: 17px;
   top: 10px;
   z-index: 2;
+  padding: 4px 10px;
+  border-radius: 20px;
+  border: 1px solid rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0, 0.2);
+  -webkit-transition: all 0.2s ease-in-out;
 }
 
+#listfunctions:hover {
+  border-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.6);
+  box-shadow: 1px 1px 4px rgba(10,10,10,0.5);
+}
+
+
 body.sidebarClosed #listfunctions {
-  right: 20px;
+  right: 30px;
 }
 
 #listfunctions a {
@@ -101,17 +113,14 @@ body.sidebarClosed #listfunctions {
   background: #000;
   display: block;
   float: left;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  opacity: 0.5; 
-  -moz-opacity: 0.5;
+  opacity: 0.5;
   cursor: pointer;
-  margin-left: 10px;
+  margin: 0 5px;
+  -webkit-transition: all 0.3s ease-out;
 }
 
 #listfunctions a:hover {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  opacity: 1.0; 
-  -moz-opacity: 1.0;
+  opacity: 1.0;
 }
 
 #listfunctions .list-print {background:url(/images/icons/print.png) no-repeat}
@@ -155,3 +164,38 @@ cursor:pointer;overflow:hidden;position:relative; float:left; margin-right:8px; 
 #taskTooltip span {position:absolute;left:105px;height:0px; width:0px;border-style: solid}
 #taskTooltip span.top {border-color: transparent transparent #333 transparent;border-width: 0px 10px 10px 10px;top:-10px}
 #taskTooltip span.bottom {border-color: #333 transparent transparent transparent;border-width: 10px 10px 0px 10px;bottom:-10px}
+
+
+
+/* SCROLLBARS */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(100,100,100,0.3);
+  border: 1px solid rgba(0,0,0,0.3);
+  cursor: pointer;
+  box-shadow: none;
+  -webkit-transition: all 1s linear;
+}
+
+:hover::-webkit-scrollbar-thumb {
+  border-color: rgba(0,0,0,0.5);
+  background-color: rgba(100,100,100,0.5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(150,150,150, 0.8);
+}
+
+::-webkit-scrollbar-thumb:active {
+  border-color: #222;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
